--- a/src/custom.css
+++ b/src/custom.css
@@ -9,6 +9,7 @@
   --white-50: #f0f0f0;
   --blue: #471aaa;
   --blue-50: #391588;
+  --gray: #858585;
 }
 body {
   background-color: var(--white-50);
