--- a/src/custom.css
+++ b/src/custom.css
@@ -12,10 +12,12 @@
   --gray: #858585;
   --red-error: #ff4f4f;
 }
+#root {
+  display: flex;
+  direction: rtl;
+}
 body {
   background-color: var(--white-50);
-  direction: rtl;
-  display: flex;
 }
 *,
 body,
