--- a/src/Components/DeleteModal/DeleteModal.css
+++ b/src/Components/DeleteModal/DeleteModal.css
@@ -1,5 +1,8 @@
 .modal-parent {
   position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   z-index: 2;
   width: 100%;
   height: 100vh;
@@ -21,7 +24,7 @@
 }
 .delete-modal {
   background-color: var(--white);
-  padding: 40px 60px 35px;
+  padding: 50px 70px 40px;
   text-align: center;
   box-shadow: 0 0 10px 6px rgba(0, 0, 0, 0.2);
   border-radius: 5px;
@@ -36,6 +39,7 @@
 .delete-modal-btns {
   display: flex;
   column-gap: 20px;
+  margin-top: 5px;
 }
 .delete-btn {
   width: 100%;
