--- a/src/Components/DetailsModal/DetailsModal.css
+++ b/src/Components/DetailsModal/DetailsModal.css
@@ -19,3 +19,43 @@
 .cms-table td {
   padding: 30px;
 }
+.detail-btn-container {
+  display: flex;
+  justify-content: end;
+  align-items: center;
+}
+.detail-btn-container p {
+  font-size: 12px;
+}
+.detail-btn-container p span {
+  font-size: 16px;
+}
+.detail-btn {
+  width: 30%;
+  border: 0.5px solid var(--gray);
+  margin-top: 30px;
+  font-size: 1.3rem;
+  padding: 6px 10px;
+  border-radius: 5px;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  -ms-border-radius: 5px;
+  -o-border-radius: 5px;
+  transition: 250ms;
+  -webkit-transition: 250ms;
+  -moz-transition: 250ms;
+  -ms-transition: 250ms;
+  -o-transition: 250ms;
+}
+.detail-btn:hover {
+  box-shadow: 0 0 10px 3px rgba(0, 0, 0, 0.2);
+  transform: scale(1.1);
+  -webkit-transform: scale(1.1);
+  -moz-transform: scale(1.1);
+  -ms-transform: scale(1.1);
+  -o-transform: scale(1.1);
+}
+.detail-modal-accept-btn {
+  color: var(--white);
+  background-color: var(--blue);
+}
