--- a/src/Components/DetailsModal/DetailsModal.css
+++ b/src/Components/DetailsModal/DetailsModal.css
@@ -30,7 +30,9 @@
 .detail-btn-container p span {
   font-size: 16px;
 }
-.detail-btn {
+.detail-confirm-btn {
+  color: var(--white);
+  background-color: var(--blue);
   width: 30%;
   border: 0.5px solid var(--gray);
   margin-top: 30px;
@@ -47,7 +49,7 @@
   -ms-transition: 250ms;
   -o-transition: 250ms;
 }
-.detail-btn:hover {
+.detail-confirm-btn:hover {
   box-shadow: 0 0 10px 3px rgba(0, 0, 0, 0.2);
   transform: scale(1.1);
   -webkit-transform: scale(1.1);
@@ -56,6 +58,4 @@
   -o-transform: scale(1.1);
 }
 .detail-modal-accept-btn {
-  color: var(--white);
-  background-color: var(--blue);
 }
