--- a/src/Components/ProductsTable/ProductsTable.css
+++ b/src/Components/ProductsTable/ProductsTable.css
@@ -50,3 +50,31 @@
   -ms-border-radius: 10px;
   -o-border-radius: 10px;
 }
+/*start edit form modal */
+.edit-products-form-group {
+  display: flex;
+  align-items: center;
+  justify-content: start;
+  width: 100%;
+  background-color: var(--gray-50);
+  margin-top: 15px;
+  column-gap: 10px;
+  border-radius: 8px;
+  padding: 4px 10px;
+  -webkit-border-radius: 8px;
+  -moz-border-radius: 8px;
+  -ms-border-radius: 8px;
+  -o-border-radius: 8px;
+}
+.edit-products-form-group span {
+  font-size: 1.5rem;
+  display: flex;
+}
+.edit-product-input {
+  background: unset;
+  border: none;
+  outline: none;
+  padding: 8px;
+  width: 100%;
+  font-size: 1.1rem;
+}
