--- a/src/Components/CommentsTable/CommentsTable.css
+++ b/src/Components/CommentsTable/CommentsTable.css
@@ -1,8 +1,12 @@
 .cms-main {
-  margin-top: 60px;
+  margin-top: 20px;
   padding: 20px;
   border-radius: 5px;
   background-color: var(--white);
+}
+.comments-title {
+  font-size: 2rem;
+  margin-top: 30px;
 }
 .cms-table {
   width: 100%;
