--- a/src/Components/ProductsTable/ProductsTable.css
+++ b/src/Components/ProductsTable/ProductsTable.css
@@ -8,6 +8,10 @@
   -ms-border-radius: 20px;
   -o-border-radius: 20px;
 }
+.products-list-title {
+  font-size: 2rem;
+  margin-top: 30px;
+}
 .products-table-heading-tr {
   display: flex;
   justify-content: space-between;
