--- a/src/Components/ProductsTable/ProductsTable.css
+++ b/src/Components/ProductsTable/ProductsTable.css
@@ -53,6 +53,15 @@
   -moz-border-radius: 10px;
   -ms-border-radius: 10px;
   -o-border-radius: 10px;
+  transition: all 0.2s;
+  -webkit-transition: all 0.2s;
+  -moz-transition: all 0.2s;
+  -ms-transition: all 0.2s;
+  -o-transition: all 0.2s;
+}
+
+.products-table-btn:hover {
+  box-shadow: 0 0 10px 5px rgba(0, 0, 0, 0.3);
 }
 /*start edit form modal */
 .edit-products-form-group {
