--- a/src/Components/UsersList/UsersList.css
+++ b/src/Components/UsersList/UsersList.css
@@ -43,6 +43,15 @@
   -moz-border-radius: 10px;
   -ms-border-radius: 10px;
   -o-border-radius: 10px;
+  transition: all 0.2s;
+  -webkit-transition: all 0.2s;
+  -moz-transition: all 0.2s;
+  -ms-transition: all 0.2s;
+  -o-transition: all 0.2s;
+}
+
+.users-table-body-tr button:hover {
+  box-shadow: 0 0 10px 5px rgba(0, 0, 0, 0.3);
 }
 .users-table-body-th {
   padding: 10px;
