--- a/src/Components/Sidebar/Sidebar.css
+++ b/src/Components/Sidebar/Sidebar.css
@@ -17,12 +17,11 @@
 .sidebar-links {
   margin-top: 20px;
 }
-.sidebar-links li {
+.sidebar-links .li {
   padding: 1rem;
   position: relative;
 }
 .sidebar-links li a {
-  width: 100%;
   color: var(--white);
   text-decoration: none;
   display: flex;
@@ -30,7 +29,7 @@
   align-items: center;
   font-size: 1.2rem;
 }
-.sidebar-links li.active {
+.sidebar-links .li.active {
   background-color: var(--blue-50);
 }
 .sidebar-links li:first-child {
