--- a/src/Components/Sidebar/Sidebar.css
+++ b/src/Components/Sidebar/Sidebar.css
@@ -17,11 +17,15 @@
 .sidebar-links {
   margin-top: 20px;
 }
-.sidebar-links .li {
+.sidebar-links a {
   padding: 1rem;
   position: relative;
 }
-.sidebar-links li a {
+.sidebar-links a:hover {
+  background-color: var(--blue-50);
+  color: var(--white);
+}
+.sidebar-links a {
   color: var(--white);
   text-decoration: none;
   display: flex;
@@ -29,9 +33,9 @@
   align-items: center;
   font-size: 1.2rem;
 }
-.sidebar-links .li.active {
+.sidebar-links a.active {
   background-color: var(--blue-50);
 }
-.sidebar-links li:first-child {
+.sidebar-links a:first-child {
   margin-bottom: 1.2rem;
 }
